[package]
name = "fibron"
version = "0.1.0"
edition = "2021"

[dependencies]
corosensei = { version = "0.2.1", git = "https://github.com/zetanumbers/corosensei.git", branch = "fiber" }
crossbeam-deque = "0.8.5"
flume = { version = "0.11.1", default-features = false, features = ["async", "eventual-fairness"] }
futures-lite = { version = "2.5.0", default-features = false, features = ["std"] }
